New Webpage Tenmplates

--- a/airMonitor/templates/airMonitor/sensor.html
+++ b/airMonitor/templates/airMonitor/sensor.html
@@ -6,14 +6,13 @@
 	<th><a href="/comparisons">Comparison </a></th>
 </tr>
 </table>
-
 <head>
-	<title>Map</title>
+	<title>Sensor</title>
 </head>
 <body>
-	<h1>Aberdeen Map</h1>
+	<h1>Sensor Information</h1>
 	<p>
-		Here is where the map will go:
+		Here is where the info will go:
 	</p>
 	
 </body>
