--- a/airMonitor/templates/airMonitor/sensorList.html
+++ b/airMonitor/templates/airMonitor/sensorList.html
@@ -6,14 +6,13 @@
 	<th><a href="/comparisons">Comparison </a></th>
 </tr>
 </table>
-
 <head>
-	<title>Map</title>
+	<title>Sensor List</title>
 </head>
 <body>
-	<h1>Aberdeen Map</h1>
+	<h1>All Sensor List</h1>
 	<p>
-		Here is where the map will go:
+		The list of sensors will go below:
 	</p>
 	
 </body>
