--- a/airMonitor/templates/airMonitor/sensorListPage.html
+++ b/airMonitor/templates/airMonitor/sensorListPage.html
@@ -2,7 +2,7 @@
 <table width=100%>
 <tr>
 	<th ><a href="/">Home </a></th>
-	<th><a href="/sensorList">Sensor List </a></th>
+	<th><a href="/sensorListPage">Sensor List </a></th>
 	<th><a href="/comparisons">Comparison </a></th>
 </tr>
 </table>
