Still model issues

--- a/airMonitor/templates/airMonitor/comparisons.html
+++ b/airMonitor/templates/airMonitor/comparisons.html
@@ -18,9 +18,9 @@
 		<label for="sensor1">Choose first sensor:</label>
 		<select name="sensor1" id="sensor1">
 			<!---	
-			{% for sensor in sensors %}
+			{ for sensor in sensors }
 				<option value={{sensor.sensorID}}> {{sensor.sensorID}} </option>
-			{% endfor %}
+			{ endfor }
 			--->
 				<option value=1> 1 </option>
 		</select>
@@ -28,9 +28,9 @@
 		<label for="sensor2">Choose second sensor:</label>
 		<select name="sensor2" id="sensor2">
 			<!---
-			{% for sensor in sensors %}
-				<option value={{sensor.sensorID}}> {{sensor.sensorID}} </option>
-			{% endfor %}
+			{ for sensor in sensors }
+			<option value={{sensor.sensorID}}> {{sensor.sensorID}} </option>
+			{ endfor }
 			--->
 				<option value=2> 2 </option>
 		</select>
