--- a/airMonitor/templates/airMonitor/index.html
+++ b/airMonitor/templates/airMonitor/index.html
@@ -1,20 +1,128 @@
 <html>
-<table width=100%>
-<tr>
-	<th><a href="/">Home </a></th>
-	<th><a href="/sensorListPage">Sensor List </a></th>
-	<th><a href="/comparisons">Comparison </a></th>
-</tr>
-</table>
+	<head>
+      <title>Map</title>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    </head>
 
-<head>
-	<title>Map</title>
-</head>
 <body>
-	<h1>Aberdeen Map</h1>
-	<p>
-		Here is where the map will go:
-	</p>
+	<!-- 1st container, logo and links --> 
+ <div class="Container mt-3 Mbg-primary text-white">
+    <div class="row">
+		<!-- logo --> 
+    <div class="col-sm-2 p-2 bg-primary text-white">LOGO</div>
+		<!-- links --> 
+    <div class="col p-1 bg-dark text-white">
+	<nav class="navbar navbar-expand-sm bg-light justify-content-center">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+             <a class="nav-link" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+             <a class="nav-link" href="/sensorList">Sensor List</a>
+          </li>
+          <li class="nav-item">
+             <a class="nav-link" href="/comparisons">Comparison</a>
+          </li>
+        </ul>
+    </nav>
+    </div>
+	</div>
+ </div>
+
+	<!-- 2nd container, map and search --> 
+	<div class="container p-0 bg-primary text-white text-center" style="height: 70%;">
+        <div class="container mt-5"> 
+        <div class="row">
+        <!--<div class="col-sm-4">-->
+		<div class="col-sm-7" style="background: red; height: 550px;">	
+        <p><h3>The map goes here</h3><p>
+        
+			<img src="https://bing.com/th/id/R.b6519b284ec38af6bacde2888faefad6?rik=bP8CD34NgsDYiQ&riu=http%3a%2f%2fwww.orangesmile.com%2fcommon%2fimg_city_maps%2faberdeen-map-1.jpg&ehk=tlDjhzTWwCYq7xy1l5jfmRkMQgNm0DMBqL4Kb84DuMQ%3d&risl=&pid=ImgRaw&r=0" alt="map" usemap="#workmap" width="500" height="379">
+                <map name="workmap">
+                <area shape="rect" coords="34,44,270,350" alt="Computer" href="https://www.graphicnet.co.uk/wp/wp-content/uploads/2013/03/Aberdeen-Map.jpg">
+                <area shape="rect" coords="290,172,333,250" alt="Phone" href="https://bing.com/th/id/OIP.84zL-0inY3mPcLRKh7JILgHaGf?pid=ImgDet&w=500&h=438&rs=1">
+                <area shape="circle" coords="337,300,44" alt="Cup of coffee" href="https://bing.com/th/id/OIP.fYw-oJcrYGwYjWzODwR80QHaIK?pid=ImgDet&rs=1">
+                </map>
+		</div>        
+		<!--<div class="col-sm-4" style="float:right;">
+			<p> col2 </p>
+        </div> -->
+        <div class="col-sm-5" style="background: grey;" >
+			<!-- 1st row for searching sensors with ID -->
+        	<div class="row">
+        		<form action="" method="post">
+            	{% csrf_token %}
+            	You could search a sensor by its <b style="color: white;"> ID </b>
+            	<input type="number" name="sensorID" placeholder="Sensor ID" min="1" max="4" style="width: 20%" required>
+            	<input type="submit" value="Search">
+        		</form>
+			</div>
+
+			<!-- 2nd row for advanced search -->
+        	<div class="row">
+				<form action="/book_list/" method="post">
+            		{% csrf_token %}
+            		You could also search a sensor by its <b style="color: white;"> Location </b>
+            		<input type="text" name="location" placeholder="location" style="width: 15%;" required>
+				
+            		<select name="location">
+                		<option value="latitude"> Latitude </option>
+                		<option value="longitude"> Longitude </option>
+						<option value="installdate"> Install Date </option>
+            		</select> 
+					<br>
+					<input type="radio" name="location" id="latitude"> Latitude 
+            		<input type="radio" name="location" id="longitude"> Longitude
+					<input type="radio" name="installdate" id="installdate"> Install Date
+        		</form> 
+			</div>
+
+			<!-- 3rd row for search results -->
+        	<div class="container">  
+				<p> Search Results </p>
+			<table class="table table-striped">
+        			<tr style="color: rgb(151, 192, 142);">
+            			<th> Sensor ID </th>
+            			<th> Longitude </th>
+            			<th> Latitude </th>
+                		<th> Install Date </th>
+						<th> Details... </th>
+        			</tr>
+
+        		 	{% for result in results %}
+        			<tr style="text-align: center;"> 
+            			<td> <b>{{result.sensorID}}</b> </td> 
+            			<td> {{result.longitude}} </td> 
+            			<td> {{result.latitude}} </td> 
+            			<td> {{result.installDate}} </td>
+						<td>
+							<form method="POST" action="sensor/">
+								{% csrf_token %}
+								<button class="selectButton" id="Selection" name="Selection" value={{ result.sensorID }} >More Details</button>
+							</form>
+						</td>	
+        			</tr>
+        			{%endfor%}
+    		</table>
+			
+
+			</div>
+        </div>
+    </div>
+
+  </div>
+</div>
+<div class="container p-0 bg-primary text-white text-center" style="height: 5%; ">
+	<div class="container mt-5">
+		<footer>
+			<p> this is the footer </p>
+    	</footer> 
+	</div> 
+</div> 
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 	
 </body>
 </html>
