--- a/airMonitor/templates/airMonitor/index.html
+++ b/airMonitor/templates/airMonitor/index.html
@@ -1,128 +1,179 @@
+{% load static %}
 <html>
 	<head>
-      <title>Map</title>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    </head>
+		<title>Map</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+		<script src='https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.js'></script>
+		<link href='https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css' rel='stylesheet' />
+		<script src='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.js'></script>
+		<link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet' />
+		<style>
+			.marker {
+				background-image: url('mapbox-icon.png');
+				background-size: cover;
+				width: 50px;
+				height: 50px;
+				border-radius: 50%;
+				cursor: pointer;
+			}
+			.mapboxgl-popup {
+				width: 200px;
+				font: 16px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+				color: black;
+			}
+		</style>	
+	</head>
 
 <body>
 	<!-- 1st container, logo and links --> 
  <div class="Container mt-3 Mbg-primary text-white">
-    <div class="row">
+	<div class="row">
 		<!-- logo --> 
-    <div class="col-sm-2 p-2 bg-primary text-white">LOGO</div>
+	<div class="col-sm-2 p-2 bg-primary text-white">LOGO</div>
 		<!-- links --> 
-    <div class="col p-1 bg-dark text-white">
+	<div class="col p-1 bg-dark text-white">
 	<nav class="navbar navbar-expand-sm bg-light justify-content-center">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-             <a class="nav-link" href="/">Home</a>
-          </li>
-          <li class="nav-item">
-             <a class="nav-link" href="/sensorListPage">Sensor List</a>
-          </li>
-          <li class="nav-item">
-             <a class="nav-link" href="/comparisons">Comparison</a>
-          </li>
-        </ul>
-    </nav>
-    </div>
+		<ul class="navbar-nav">
+		<li class="nav-item">
+			<a class="nav-link" href="/">Home</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="/sensorListPage">Sensor List</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="/comparisons">Comparison</a>
+		</li>
+		</ul>
+	</nav>
 	</div>
- </div>
+	</div>
+</div>
 
 	<!-- 2nd container, map and search --> 
 	<div class="container p-0 bg-primary text-white text-center" style="height: 70%;">
-        <div class="container mt-5"> 
-        <div class="row">
-        <!--<div class="col-sm-4">-->
+		<div class="container mt-5"> 
+		<div class="row">
+		<!--<div class="col-sm-4">-->
 		<div class="col-sm-7" style="background: red; height: 550px;">	
-        <p><h3>The map goes here</h3><p>
-        
-			<img src="https://bing.com/th/id/R.b6519b284ec38af6bacde2888faefad6?rik=bP8CD34NgsDYiQ&riu=http%3a%2f%2fwww.orangesmile.com%2fcommon%2fimg_city_maps%2faberdeen-map-1.jpg&ehk=tlDjhzTWwCYq7xy1l5jfmRkMQgNm0DMBqL4Kb84DuMQ%3d&risl=&pid=ImgRaw&r=0" alt="map" usemap="#workmap" width="500" height="379">
-                <map name="workmap">
-                <area shape="rect" coords="34,44,270,350" alt="Computer" href="https://www.graphicnet.co.uk/wp/wp-content/uploads/2013/03/Aberdeen-Map.jpg">
-                <area shape="rect" coords="290,172,333,250" alt="Phone" href="https://bing.com/th/id/OIP.84zL-0inY3mPcLRKh7JILgHaGf?pid=ImgDet&w=500&h=438&rs=1">
-                <area shape="circle" coords="337,300,44" alt="Cup of coffee" href="https://bing.com/th/id/OIP.fYw-oJcrYGwYjWzODwR80QHaIK?pid=ImgDet&rs=1">
-                </map>
+		<p><h3>The map goes here</h3><p>
+		<div id='map' style='width: 100%; height: 480px;'></div>
+		<script>
+			mapboxgl.accessToken = 'pk.eyJ1IjoieGVudGVycmEiLCJhIjoiY2w0NW4wOHBzMDA3NDNrczA5bHVwaHZqbyJ9.-vV70Us_kN66fPKzCGSLxg';
+
+			var map = new mapboxgl.Map({
+			container: 'map',
+			style: 'mapbox://styles/mapbox/streets-v11',
+			center: [-2.0938, 57.1499 ],
+			zoom: 10,
+			});
+
+			var longitudeList = {{longList}};
+			var latitudeList = {{latList}};
+			var listLength = {{lLength}};
+
+			var longArray = JSON.parse("[" + longitudeList + "]");
+			var latArray = JSON.parse("[" + latitudeList + "]");
+
+			for (let r=0; r<listLength; r++){
+				textHTML = "".concat(r+1)
+				textHTML1 = textHTML.concat(" >More Details</button></form>");
+				textHTML2 = '<form method="POST" action="/sensor/">{% csrf_token %}<button class="selectButton" id="Selection" name="Selection" value='.concat(textHTML1);
+				
+				sensorName = "Sensor".concat(" ",r+1)
+				sensorHTML = sensorName.concat('</h2>')
+				sensorHTML1 = '<h2>'.concat(sensorHTML)
+				
+				finalHTML = sensorHTML.concat(textHTML2)
+
+				popup = new mapboxgl.Popup({ offset: 25 })
+				.setHTML(finalHTML);
+				marker = new mapboxgl.Marker()
+				.setLngLat([longArray[r],latArray[r]])
+				.setPopup(popup)
+				.addTo(map);
+			}
+
+		</script>	
 		</div>        
 		<!--<div class="col-sm-4" style="float:right;">
 			<p> col2 </p>
-        </div> -->
-        <div class="col-sm-5" style="background: grey;" >
+		</div> -->
+		<div class="col-sm-5" style="background: grey;" >
 			<!-- 1st row for searching sensors with ID -->
-        	<div class="row">
-        		<form action="" method="post">
-            	{% csrf_token %}
-            	You could search a sensor by its <b style="color: white;"> ID </b>
-            	<input type="number" name="sensorID" placeholder="Sensor ID" min="1" max="4" style="width: 20%" required>
-            	<input type="submit" value="Search">
-        		</form>
+			<div class="row">
+				<form action="" method="post">
+				{% csrf_token %}
+				You could search a sensor by its <b style="color: white;"> ID </b>
+				<input type="number" name="sensorID" placeholder="Sensor ID" min="1" max="4" style="width: 20%" required>
+				<input type="submit" value="Search">
+				</form>
 			</div>
 
 			<!-- 2nd row for advanced search -->
-        	<div class="row">
+			<div class="row">
 				<form action="/book_list/" method="post">
-            		{% csrf_token %}
-            		You could also search a sensor by its <b style="color: white;"> Location </b>
-            		<input type="text" name="location" placeholder="location" style="width: 15%;" required>
-				
-            		<select name="location">
-                		<option value="latitude"> Latitude </option>
-                		<option value="longitude"> Longitude </option>
+					{% csrf_token %}
+					You could also search a sensor by its <b style="color: white;"> Location </b>
+					<input type="text" name="location" placeholder="location" style="width: 15%;" required>
+
+					<select name="location">
+						<option value="latitude"> Latitude </option>
+						<option value="longitude"> Longitude </option>
 						<option value="installdate"> Install Date </option>
-            		</select> 
+					</select> 
 					<br>
 					<input type="radio" name="location" id="latitude"> Latitude 
-            		<input type="radio" name="location" id="longitude"> Longitude
+					<input type="radio" name="location" id="longitude"> Longitude
 					<input type="radio" name="installdate" id="installdate"> Install Date
-        		</form> 
+				</form> 
 			</div>
 
 			<!-- 3rd row for search results -->
-        	<div class="container">  
+			<div class="container">  
 				<p> Search Results </p>
 			<table class="table table-striped">
-        			<tr style="color: rgb(151, 192, 142);">
-            			<th> Sensor ID </th>
-            			<th> Longitude </th>
-            			<th> Latitude </th>
-                		<th> Install Date </th>
+					<tr style="color: rgb(151, 192, 142);">
+						<th> Sensor ID </th>
+						<th> Longitude </th>
+						<th> Latitude </th>
+						<th> Install Date </th>
 						<th> Details... </th>
-        			</tr>
-
-        		 	{% for result in results %}
-        			<tr style="text-align: center;"> 
-            			<td> <b>{{result.sensorID}}</b> </td> 
-            			<td> {{result.longitude}} </td> 
-            			<td> {{result.latitude}} </td> 
-            			<td> {{result.installDate}} </td>
+					</tr>
+				 	{% for result in results %}
+					<tr style="text-align: center;"> 
+						<td> <b>{{result.sensorID}}</b> </td> 
+						<td> {{result.longitude}} </td> 
+						<td> {{result.latitude}} </td> 
+						<td> {{result.installDate}} </td>
 						<td>
 							<form method="POST" action="/sensor/">
 								{% csrf_token %}
 								<button class="selectButton" id="Selection" name="Selection" value={{ result.sensorID }} >More Details</button>
 							</form>
 						</td>	
-        			</tr>
-        			{%endfor%}
-    		</table>
+					</tr>
+					{% endfor %}
+			</table>
 			
 
+				</div>
 			</div>
-        </div>
-    </div>
-
-  </div>
+		</div>
+	</div>
 </div>
 <div class="container p-0 bg-primary text-white text-center" style="height: 5%; ">
 	<div class="container mt-5">
 		<footer>
 			<p> this is the footer </p>
-    	</footer> 
+		</footer> 
 	</div> 
 </div> 
 
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-	
+
 </body>
 </html>
