--- a/airMonitor/templates/airMonitor/sensorListPage.html
+++ b/airMonitor/templates/airMonitor/sensorListPage.html
@@ -13,7 +13,7 @@
 	<h1>All Sensor List</h1>
 	<form action="/sensorListPage/" method="POST">
 		{% csrf_token %}
-		<input type="text" name="criteria" placeholder="Enter search..." style="width: 15%;" require><br>
+		<input type="text" name="criteria" placeholder="Enter search..." style="width: 15%;"><br>
 		<p> Search for a sensor by its: </p>
 		<input type="radio" id="sensorID" name="searchType" value="sensorID" checked>
 		<label for="sensorID">SensorID</label>
