New Data and Model Design

--- a/airMonitor/templates/airMonitor/comparisons.html
+++ b/airMonitor/templates/airMonitor/comparisons.html
@@ -45,7 +45,8 @@
 			<td>{{sList1.sensorID}}</th>
 			<td>{{sList1.longitude}}</th>
 			<td>{{sList1.latitude}}</th>
-			<td>{{sList1.installDate}}</th>
+			<td>{{sList1.sensorType}}</th>
+			<td>{{sList1.location_id}}</th>
 			<td>
 				<form method="POST" action="/sensor/">
 					{% csrf_token %}
