--- a/airMonitor/templates/airMonitor/comparisons.html
+++ b/airMonitor/templates/airMonitor/comparisons.html
@@ -1,84 +1,123 @@
-<html>
-<table width=100%>
-<tr>
-	<th ><a href="/">Home </a></th>
-	<th><a href="/sensorListPage">Sensor List </a></th>
-	<th><a href="/comparisons">Comparison </a></th>
-</tr>
-</table>
-<head>
-	<title>Comparisons</title>
-</head>
-<body>
-	<h1>Comparing Sensors</h1>
+{% extends 'base.html' %} 
 
-<form action="" method="POST">
-	{% csrf_token %}
-	<h2> Select sensor 1 </h2>
-		<label for="sensor1">Choose first sensor:</label>
-		<select name="sensor1" id="sensor1">
-			{% for s in sensors %}
-			<option value={{s.sensorID}}> {{s.sensorID}} </option>
-			{% endfor %}
-		</select>
-	<h2> Select sensor 2 </h2>
-		<label for="sensor2">Choose second sensor:</label>
-		<select name="sensor2" id="sensor2">
-			{% for s in sensors %}
-			<option value={{s.sensorID}}> {{s.sensorID}} </option>
-			{% endfor %}
-		</select>
-	<br>
-	<input type="submit" value="Submit">		
-</form>
-	{% if sList1 %}
-	<br><br>
-	<table width=100% style="text-align:center;">
-		<tr>
-			<th>ID</th>
-			<th>Longitude</th>
-			<th>Latitude</th>
-			<th>Install Date</th>
-			<th>Details...</th>
-		</tr>
-		<tr>
-			<td>{{sList1.sensorID}}</th>
-			<td>{{sList1.longitude}}</th>
-			<td>{{sList1.latitude}}</th>
-			<td>{{sList1.sensorType}}</th>
-			<td>{{sList1.location_id}}</th>
-			<td>
-				<form method="POST" action="/sensor/">
-					{% csrf_token %}
-					<button class="selectButton" id="Selection" name="Selection" value={{ result.sensorID }} >More Details</button>
-				</form>
-			</td>	
-		</tr>
-	</table>
-	<br><br>
-	<table width=100% style="text-align:center;">
-		<tr>
-			<th>ID</th>
-			<th>Longitude</th>
-			<th>Latitude</th>
-			<th>Install Date</th>
-			<th>Details...</th>
-		</tr>
-		<tr>
-			<td>{{sList2.sensorID}}</th>
-			<td>{{sList2.longitude}}</th>
-			<td>{{sList2.latitude}}</th>
-			<td>{{sList2.installDate}}</th>
-			<td>
-				<form method="POST" action="/sensor/">
-					{% csrf_token %}
-					<button class="selectButton" id="Selection" name="Selection" value={{ result.sensorID }} >More Details</button>
-				</form>
-			</td>	
-		</tr>
-	</table>
-	{%else %}
-	<p> Sumbit two sensors to see comparisons</p>
-	{% endif %}
-</body>
-</html>
+{% block title %} Comparisons {% endblock %}
+
+{% block content %}
+
+<body>
+
+	<!-- Container 1: Search bar -->
+	<div class="container bg-primary">
+		<!-- Row 1: title -->
+		<div class="row bg-secondary" style="text-align: center;"> 
+			<h1> Comparing Sensors </h1>
+		</div>
+
+		<!-- Row 2: form -->
+		<div class="row bg-success my-3">
+			<form action="" method="POST">
+				{% csrf_token %}
+				<!-- Row 1: sensor selections  -->
+				<div class="row bg-danger">
+					<!-- Column 1: sensor 1 -->
+					<div class="col-md-4 bg-info align-self-center">
+						<!-- <h2> Select sensor 1 </h2> -->
+						<label for="sensor1"> Choose first sensor: </label>
+						<select name="sensor1" id="sensor1">
+							{% for s in sensors %}
+							<option value={{s.sensorID}}> {{s.sensorID}} </option>
+							{% endfor %}
+						</select>
+					</div>
+					
+					<!-- Column 2: sensor 2 -->
+					<div class="col-md-4 bg-warning align-self-center">
+						<!-- <h2> Select sensor 2 </h2> -->
+						<label for="sensor2">Choose second sensor:</label>
+						<select name="sensor2" id="sensor2">
+							{% for s in sensors %}
+							<option value={{s.sensorID}}> {{s.sensorID}} </option>
+							{% endfor %}
+						</select>
+					</div>
+					<!-- Column 2: sensor 2 -->
+					<div class="col text-center align-self-center">
+						<button type="submit" class="btn btn-primary my-1"> Compare </button>
+						<!-- <input type="submit" value="Submit"> -->
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
+
+	
+	<!-- Container 2: table and graph --> 
+	<div class="container bg-dark my-3">
+		<div class="row bg-success">
+			<!-- Column 1: table -->
+			<div class="col-md-6 bg-warning mr-1 table-responsive"> 
+				{% if sList1 %}
+				<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
+					<caption style="text-align:center; color: black;"> Comparisons </caption>
+					<thead class="table-danger">
+						<tr>
+							<th>ID</th>
+							<th>Longitude</th>
+							<th>Latitude</th>
+							<th>Install Date</th>
+							<th>Details...</th>
+						</tr>
+					</thead>
+					<tr>
+						<td>{{sList1.sensorID}}</th>
+						<td>{{sList1.longitude}}</th>
+						<td>{{sList1.latitude}}</th>
+						<td>{{sList1.sensorType}}</th>
+						<td>{{sList1.location_id}}</th>
+						<td>
+							<form method="POST" action="/sensor/">
+								{% csrf_token %}
+								<button class="selectButton" id="Selection" name="Selection" value={{ result.sensorID }} >More Details</button>
+							</form>
+						</td>	
+					</tr>
+				</table>
+				<br><br>
+				<table width=100% style="text-align:center;">
+					<tr>
+						<th>ID</th>
+						<th>Longitude</th>
+						<th>Latitude</th>
+						<th>Install Date</th>
+						<th>Details...</th>
+					</tr>
+					<tr>
+						<td>{{sList2.sensorID}}</th>
+						<td>{{sList2.longitude}}</th>
+						<td>{{sList2.latitude}}</th>
+						<td>{{sList2.installDate}}</th>
+						<td>
+							<form method="POST" action="/sensor/">
+								{% csrf_token %}
+								<button class="selectButton" id="Selection" name="Selection" value={{ result.sensorID }} >More Details</button>
+							</form>
+						</td>	
+					</tr>
+				</table>
+				{%else %}
+				<p> Sumbit two sensors to see comparisons </p>
+				{% endif %}
+
+
+			</div>
+
+		</div>
+
+	</div>
+
+
+
+
+	
+
+{% endblock %}
