Comparison Page formatting and Scripting

--- a/airMonitor/templates/airMonitor/base.html
+++ b/airMonitor/templates/airMonitor/base.html
@@ -47,7 +47,7 @@
 
                     <!-- links -->
                     <li class="nav-item">
-                        <a class="nav-link text-warning" href=""> Home </a>
+                        <a class="nav-link text-warning" href="/"> Home </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-warning" href="/sensorListPage"> Sensor List </a>
