--- a/airMonitor/templates/airMonitor/comparisons.html
+++ b/airMonitor/templates/airMonitor/comparisons.html
@@ -6,15 +6,54 @@
 
 <body>
 
-	<!-- Container 1: Search bar -->
+	<!-- Container 1: Selection Area -->
 	<div class="container bg-primary">
-		<!-- Row 1: title -->
+		<!-- Row 1: Title -->
 		<div class="row bg-secondary" style="text-align: center;"> 
 			<h1> Comparing Sensors </h1>
 		</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script>
+	$(document).ready(function(){
+		$("#sType").on('change',function(){
+			$(".compare").hide();
+			$("#" + $(this).val()).fadeIn(200);
+		}).change();
+	});
 
-		<!-- Row 2: form -->
+</script>
+		<!-- Row 2: Type Selection -->
 		<div class="row bg-success my-3">
+			<form action="" method="POST">
+				{% csrf_token %}
+				<!-- Row 1: Type Selection  -->
+				<div class="row bg-danger">
+					<!-- Column 1: sensor 1 -->
+					<div class="col-md-4 bg-info align-self-center">
+						<!-- <h2> Select sensor 1 </h2> -->
+						<label for="sensor1"> Choose a type of sensor: </label>
+						<select name="sType" id="sType">
+							<option value="x"> Type... </option>
+							<option value="SDS011"> SDS011 </option>
+							<option value="BME280"> BME280 </option>
+							<option value="DHT22"> DHT22 </option>
+						</select>
+					</div>
+				</div>
+			</form>
+		</div>
+		<div class="compare" id="x">
+			<form action="" method="POST">
+				{% csrf_token %}
+				<!-- Row 1: sensor selections  -->
+				<div class="row bg-danger">
+					<!-- Column 1: sensor 1 -->
+					<h2>Please select a sensor type!</h2>
+				</div>
+			</form>
+		</div>
+
+		<div class="compare" id="SDS011">
 			<form action="" method="POST">
 				{% csrf_token %}
 				<!-- Row 1: sensor selections  -->
@@ -24,7 +63,7 @@
 						<!-- <h2> Select sensor 1 </h2> -->
 						<label for="sensor1"> Choose first sensor: </label>
 						<select name="sensor1" id="sensor1">
-							{% for s in sensors %}
+							{% for s in SDSsensors %}
 							<option value={{s.sensorID}}> {{s.sensorID}} </option>
 							{% endfor %}
 						</select>
@@ -35,7 +74,75 @@
 						<!-- <h2> Select sensor 2 </h2> -->
 						<label for="sensor2">Choose second sensor:</label>
 						<select name="sensor2" id="sensor2">
-							{% for s in sensors %}
+							{% for s in SDSsensors %}
+							<option value={{s.sensorID}}> {{s.sensorID}} </option>
+							{% endfor %}
+						</select>
+					</div>
+					<!-- Column 2: sensor 2 -->
+					<div class="col text-center align-self-center">
+						<button type="submit" class="btn btn-primary my-1"> Compare </button>
+						<!-- <input type="submit" value="Submit"> -->
+					</div>
+				</div>
+			</form>
+		</div>
+		<div class="compare" id="BME280">
+			<form action="" method="POST">
+				{% csrf_token %}
+				<!-- Row 1: sensor selections  -->
+				<div class="row bg-danger">
+					<!-- Column 1: sensor 1 -->
+					<div class="col-md-4 bg-info align-self-center">
+						<!-- <h2> Select sensor 1 </h2> -->
+						<label for="sensor1"> Choose first sensor: </label>
+						<select name="sensor1" id="sensor1">
+							{% for s in BMEsensors %}
+							<option value={{s.sensorID}}> {{s.sensorID}} </option>
+							{% endfor %}
+						</select>
+					</div>
+					
+					<!-- Column 2: sensor 2 -->
+					<div class="col-md-4 bg-warning align-self-center">
+						<!-- <h2> Select sensor 2 </h2> -->
+						<label for="sensor2">Choose second sensor:</label>
+						<select name="sensor2" id="sensor2">
+							{% for s in BMEsensors %}
+							<option value={{s.sensorID}}> {{s.sensorID}} </option>
+							{% endfor %}
+						</select>
+					</div>
+					<!-- Column 2: sensor 2 -->
+					<div class="col text-center align-self-center">
+						<button type="submit" class="btn btn-primary my-1"> Compare </button>
+						<!-- <input type="submit" value="Submit"> -->
+					</div>
+				</div>
+			</form>
+		</div>
+		<div class="compare" id="DHT22">
+			<form action="" method="POST">
+				{% csrf_token %}
+				<!-- Row 1: sensor selections  -->
+				<div class="row bg-danger">
+					<!-- Column 1: sensor 1 -->
+					<div class="col-md-4 bg-info align-self-center">
+						<!-- <h2> Select sensor 1 </h2> -->
+						<label for="sensor1"> Choose first sensor: </label>
+						<select name="sensor1" id="sensor1">
+							{% for s in DHTsensors %}
+							<option value={{s.sensorID}}> {{s.sensorID}} </option>
+							{% endfor %}
+						</select>
+					</div>
+					
+					<!-- Column 2: sensor 2 -->
+					<div class="col-md-4 bg-warning align-self-center">
+						<!-- <h2> Select sensor 2 </h2> -->
+						<label for="sensor2">Choose second sensor:</label>
+						<select name="sensor2" id="sensor2">
+							{% for s in DHTsensors %}
 							<option value={{s.sensorID}}> {{s.sensorID}} </option>
 							{% endfor %}
 						</select>
@@ -64,7 +171,7 @@
 							<th>ID</th>
 							<th>Longitude</th>
 							<th>Latitude</th>
-							<th>Install Date</th>
+							<th>Installation ID</th>
 							<th>Details...</th>
 						</tr>
 					</thead>
@@ -72,52 +179,46 @@
 						<td>{{sList1.sensorID}}</th>
 						<td>{{sList1.longitude}}</th>
 						<td>{{sList1.latitude}}</th>
-						<td>{{sList1.sensorType}}</th>
 						<td>{{sList1.location_id}}</th>
 						<td>
 							<form method="POST" action="/sensor/">
 								{% csrf_token %}
-								<button class="selectButton" id="Selection" name="Selection" value={{ result.sensorID }} >More Details</button>
+								<button class="selectButton" id="Selection" name="Selection" value={{ sList1.sensorID }} >More Details</button>
 							</form>
 						</td>	
 					</tr>
 				</table>
-				<br><br>
-				<table width=100% style="text-align:center;">
-					<tr>
-						<th>ID</th>
-						<th>Longitude</th>
-						<th>Latitude</th>
-						<th>Install Date</th>
-						<th>Details...</th>
-					</tr>
+			</div>
+			<div class="col-md-6 bg-warning mr-2 table-responsive"> 
+				<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
+					<caption style="text-align:center; color: black;"> Sensor 1 </caption>
+					<thead class="table-danger">
+						<tr>
+							<th>ID</th>
+							<th>Longitude</th>
+							<th>Latitude</th>
+							<th>Installation ID</th>
+							<th>Details...</th>
+						</tr>
+					</thead>
 					<tr>
 						<td>{{sList2.sensorID}}</th>
 						<td>{{sList2.longitude}}</th>
 						<td>{{sList2.latitude}}</th>
-						<td>{{sList2.installDate}}</th>
+						<td>{{sList2.location_id}}</th>
 						<td>
 							<form method="POST" action="/sensor/">
 								{% csrf_token %}
-								<button class="selectButton" id="Selection" name="Selection" value={{ result.sensorID }} >More Details</button>
+								<button class="selectButton" id="Selection" name="Selection" value={{ sList2.sensorID }} >More Details</button>
 							</form>
 						</td>	
 					</tr>
 				</table>
-				{%else %}
-				<p> Sumbit two sensors to see comparisons </p>
-				{% endif %}
-
-
+			{%else %}
+				<h2> Submit two sensors to see comparisons </h2>
+			{% endif %}
 			</div>
-
+			
 		</div>
-
 	</div>
-
-
-
-
-	
-
 {% endblock %}
