--- a/airMonitor/templates/airMonitor/base.html
+++ b/airMonitor/templates/airMonitor/base.html
@@ -26,7 +26,7 @@
 <body>
     
     <!-- navigation bar -->
-    <nav class="navbar navbar-expand-sm my-3 bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-sm mb-3 bg-dark navbar-dark">
         <div class="container bg-danger p-2">
 
             <!-- logo -->
