--- a/airMonitor/templates/airMonitor/comparisons.html
+++ b/airMonitor/templates/airMonitor/comparisons.html
@@ -183,7 +183,7 @@
 						<td>
 							<form method="POST" action="/sensor/">
 								{% csrf_token %}
-								<button class="selectButton" id="Selection" name="Selection" value={{ sList1.sensorID }} >More Details</button>
+								<button class="selectButton btn btn-primary" id="Selection" name="Selection" value={{ sList1.sensorID }} >More Details</button>
 							</form>
 						</td>	
 					</tr>
@@ -209,7 +209,7 @@
 						<td>
 							<form method="POST" action="/sensor/">
 								{% csrf_token %}
-								<button class="selectButton" id="Selection" name="Selection" value={{ sList2.sensorID }} >More Details</button>
+								<button class="selectButton btn btn-primary" id="Selection" name="Selection" value={{ sList2.sensorID }} >More Details</button>
 							</form>
 						</td>	
 					</tr>
