--- a/airMonitor/templates/airMonitor/index.html
+++ b/airMonitor/templates/airMonitor/index.html
@@ -1,174 +1,125 @@
-{% load static %}
-<html>
-	<head>
-		<title>Map</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-		<script src='https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.js'></script>
-		<link href='https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css' rel='stylesheet' />
-		<script src='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.js'></script>
-		<link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet' />
-		<style>
-			.marker {
-				background-image: url('mapbox-icon.png');
-				background-size: cover;
-				width: 50px;
-				height: 50px;
-				border-radius: 50%;
-				cursor: pointer;
-			}
-			.mapboxgl-popup {
-				width: 200px;
-				font: 16px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
-				color: black;
-			}
-		</style>	
-	</head>
+{% extends 'base.html' %} 
 
-<body>
-	<!-- 1st container, logo and links --> 
- <div class="Container mt-3 Mbg-primary text-white">
-	<div class="row">
-		<!-- logo --> 
-	<div class="col-sm-2 p-2 bg-primary text-white">LOGO</div>
-		<!-- links --> 
-	<div class="col p-1 bg-dark text-white">
-	<nav class="navbar navbar-expand-sm bg-light justify-content-center">
-		<ul class="navbar-nav">
-		<li class="nav-item">
-			<a class="nav-link" href="/">Home</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="/sensorListPage">Sensor List</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="/comparisons">Comparison</a>
-		</li>
-		</ul>
-	</nav>
-	</div>
-	</div>
+{% block title %} Air Monitor {% endblock %}
+
+{% block content %}
+
+<!-- container(s) -->
+
+<!-- Container 1: map -->
+<div class="container bg-primary text-center">
+    <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12">  
+            <div id='map' style='width: 100%; height: 550px;'>
+                <script>
+                    mapboxgl.accessToken = 'pk.eyJ1IjoieGVudGVycmEiLCJhIjoiY2w0NW4wOHBzMDA3NDNrczA5bHVwaHZqbyJ9.-vV70Us_kN66fPKzCGSLxg';
+
+                    var map = new mapboxgl.Map({
+                    container: 'map',
+                    style: 'mapbox://styles/mapbox/streets-v11',
+                    center: [-2.0938, 57.1499 ],
+                    zoom: 10,
+                    });
+
+                    var longitudeList = {{longList}};
+                    var latitudeList = {{latList}};
+                    var listLength = {{lLength}};
+
+                    var longArray = JSON.parse("[" + longitudeList + "]");
+                    var latArray = JSON.parse("[" + latitudeList + "]");
+
+                    for (let r=0; r<listLength; r++){
+                        textHTML = "".concat(r+1)
+                        textHTML1 = textHTML.concat(" >More Details</button></form>");
+                        textHTML2 = '<form method="POST" action="/sensor/">{% csrf_token %}<button class="selectButton btn btn-link" id="Selection" name="Selection" value='.concat(textHTML1);
+                        
+                        sensorName = "Sensor".concat(" ",r+1)
+                        sensorHTML = sensorName.concat('</h2>')
+                        sensorHTML1 = '<h2>'.concat(sensorHTML)
+                        
+                        finalHTML = sensorHTML.concat(textHTML2)
+
+                        popup = new mapboxgl.Popup({ offset: 25 })
+                        .setHTML(finalHTML);
+                        marker = new mapboxgl.Marker()
+                        .setLngLat([longArray[r],latArray[r]])
+                        .setPopup(popup)
+                        .addTo(map);
+                    }
+                </script>	
+            </div> 
+        </div>
+    </div>
 </div>
 
-	<!-- 2nd container, map and search --> 
-	<div class="container p-0 bg-primary text-white text-center" style="height: 70%;">
-		<div class="container mt-5"> 
-		<div class="row">
-		<!--<div class="col-sm-4">-->
-		<div class="col-sm-7" style="background: red; height: 550px;">	
-		<p><h3>The map goes here</h3><p>
-		<div id='map' style='width: 100%; height: 480px;'></div>
-		<script>
-			mapboxgl.accessToken = 'pk.eyJ1IjoieGVudGVycmEiLCJhIjoiY2w0NW4wOHBzMDA3NDNrczA5bHVwaHZqbyJ9.-vV70Us_kN66fPKzCGSLxg';
+<!-- Container 2: search and results -->
+<div class="container my-3 bg-danger">
+    <div class="row"> 
+        <!-- Column 1: search -->
+        <div class="col-md-3 bg-info" style="text-align: center;"> 
+            <form action="" method="post">
+                {% csrf_token %}
+                <!-- Row 1: title and subtitle -->
+                <div class="row bg-success">
+                    <h4> Quick Search </h4>
+                </div>
+                <!-- Row 2: search bar -->
+                <div class="row bg-warning">
+                    <div class="col-md-4">
+                        <label for="sID_1" class="col-form-label"> Sensor ID: </label>
+                    </div>
+                    <div class="col-md-4 align-self-center">
+                        <input type="text" name="sensorID" placeholder="Sensor ID" class="w-100" required>
+                    </div>
+                    <div class="col">
+                        <button type="submit" class="btn btn-primary"> Search </button>
+                    </div>
+                </div>
+            </form> 
+        </div>
 
-			var map = new mapboxgl.Map({
-			container: 'map',
-			style: 'mapbox://styles/mapbox/streets-v11',
-			center: [-2.0938, 57.1499 ],
-			zoom: 10,
-			});
-
-			var longitudeList = {{longList}};
-			var latitudeList = {{latList}};
-			var listLength = {{lLength}};
-
-			var longArray = JSON.parse("[" + longitudeList + "]");
-			var latArray = JSON.parse("[" + latitudeList + "]");
-
-			for (let r=0; r<listLength; r++){
-				textHTML = "".concat(r+1)
-				textHTML1 = textHTML.concat(" >More Details</button></form>");
-				textHTML2 = '<form method="POST" action="/sensor/">{% csrf_token %}<button class="selectButton" id="Selection" name="Selection" value='.concat(textHTML1);
-				
-				sensorName = "Sensor".concat(" ",r+1)
-				sensorHTML = sensorName.concat('</h2>')
-				sensorHTML1 = '<h2>'.concat(sensorHTML)
-				
-				finalHTML = sensorHTML.concat(textHTML2)
-
-				popup = new mapboxgl.Popup({ offset: 25 })
-				.setHTML(finalHTML);
-				marker = new mapboxgl.Marker()
-				.setLngLat([longArray[r],latArray[r]])
-				.setPopup(popup)
-				.addTo(map);
-			}
-
-		</script>	
-		</div>        
-		<!--<div class="col-sm-4" style="float:right;">
-			<p> col2 </p>
-		</div> -->
-		<div class="col-sm-5" style="background: grey;" >
-			<!-- 1st row for searching sensors with ID -->
-			<div class="row">
-				<form action="" method="post">
-				{% csrf_token %}
-				You could search a sensor by its <b style="color: white;"> ID </b>
-				<input type="number" name="sensorID" placeholder="Sensor ID" min="1" max="4" style="width: 20%" required>
-				<input type="submit" value="Search">
-				</form>
-			</div>
-
-			<!-- 2nd row for advanced search -->
-			<div class="row">
-				<form action="/book_list/" method="post">
-					{% csrf_token %}
-					You could also search a sensor by its <b style="color: white;"> Location </b>
-					<input type="text" name="location" placeholder="location" style="width: 15%;" required>
-
-					<select name="location">
-						<option value="latitude"> Latitude </option>
-						<option value="longitude"> Longitude </option>
-						<option value="installdate"> Install Date </option>
-					</select> 
-					<br>
-					<input type="radio" name="location" id="latitude"> Latitude 
-					<input type="radio" name="location" id="longitude"> Longitude
-					<input type="radio" name="installdate" id="installdate"> Install Date
-				</form> 
-			</div>
-
-			<!-- 3rd row for search results -->
-			<div class="container">  
-				<p> Search Results </p>
-			<table class="table table-striped">
-					<tr style="color: rgb(151, 192, 142);">
-						<th> Sensor ID </th>
-						<th> Sensor Type </th>
-						<th> Location ID </th>
-						<th> Longitude </th>
-						<th> Latitude </th>
-					</tr>
-				 	{% for result in results %}
-					<tr style="text-align: center;"> 
-						<td> <b>{{result.sensorID}}</b> </td> 
-						<td> {{result.sensorType}} </td>
-						<td> {{result.location_id}} </td>
-						<td> {{result.longitude}} </td> 
-						<td> {{result.latitude}} </td> 
-					</tr>
-					{% endfor %}
-			</table>
-			
-
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<div class="container p-0 bg-primary text-white text-center" style="height: 5%; ">
-	<div class="container mt-5">
-		<footer>
-			<p> this is the footer </p>
-		</footer> 
-	</div> 
-</div> 
-
+        <!-- Column 2: results -->
+        <div class="col" style="text-align: center;">
+            <!-- Row 1: title -->
+            <div class="row bg-danger" >
+                <h4> Search Results </h4>
+            </div>
+            <!-- Row 2: search results -->
+            <div class="row bg-success"> 
+                {% if sensors %}
+                <table class="table table-striped table-hover align-middle caption-top">
+                    <caption style="text-align:center; color: black;"> Sensor Information </caption>
+                    <thead class="table-secondary">
+                        <tr>
+                            <th> Sensor ID </th>
+                            <th> Longitude </th>
+                            <th> Latitude </th>
+                            <th> Install Date </th>
+                            <th> Details </th>
+                        </tr>
+                    </thead>
+                    <tbody> 
+                        {% for result in sensors %}
+                        <tr style="text-align: center;"> 
+                            <td> <b>{{result.sensorID}}</b> </td> 
+                            <td> {{result.longitude}} </td> 
+                            <td> {{result.latitude}} </td> 
+                            <td> {{result.installDate}} </td>
+                            <td>
+                                <form method="POST" action="/sensor/">
+                                    {% csrf_token %}
+                                    <button class="selectButton btn btn-danger" id="Selection" name="Selection" value={{ result.sensorID }} >More Details</button>
+                                </form>
+                            </td>	
+                        </tr>
+                        {% endfor %} 
+                    </tbody>
+                </table>
+                {% endif %}
+            </div>
+        </div>
+    </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-</body>
-</html>
+{% endblock %}
