--- a/airMonitor/templates/airMonitor/sensorListPage.html
+++ b/airMonitor/templates/airMonitor/sensorListPage.html
@@ -1,46 +1,66 @@
-<html>
-<table width=100%>
-<tr>
-	<th ><a href="/">Home </a></th>
-	<th><a href="/sensorListPage">Sensor List </a></th>
-	<th><a href="/comparisons">Comparison </a></th>
-</tr>
-</table>
-<head>
-	<title>Sensor List</title>
-</head>
-<body>
-	<h1>All Sensor List</h1>
-	<form action="/sensorListPage/" method="POST">
-		{% csrf_token %}
-		<input type="text" name="criteria" placeholder="Enter search..." style="width: 15%;"><br>
-		<p> Search for a sensor by its: </p>
-		<input type="radio" id="sensorID" name="searchType" value="sensorID" checked>
-		<label for="sensorID">SensorID</label>
-		<input type="radio" id="longitude" name="searchType" value="longitude">
-		<label for="longitude">Longitude</label>
-		<input type="radio" id="latitude" name="searchType" value="latitude">
-		<label for="latitude">Latitude</label>
-		<input type="radio" id="installDate" name="searchType" value="installDate">
-		<label for="installDate">Install Date</label>
-	</form>
-	<br>
-	<p>
-		{% for sensor in sensors %}
-	<div>
-		{{sensor.sensorID }} | 
-		{{sensor.longitude}} | 
-        {{sensor.latitude}} |
-        {{sensor.installDate}} |
-		<form method="POST" action="/sensor/">
+{% extends 'base.html' %} 
+
+{% block title %} Sensor List {% endblock %}
+
+{% block content %}
+
+<!-- Container 1: search bar -->
+<div class="container my-3 bg-success">
+	<div class="row bg-warning">
+		<!-- search bar -->
+		<!-- <h1> All Sensor List </h1> -->
+		<form action="/sensorListPage/" method="POST" class="form-inline">
 			{% csrf_token %}
-			<button class="selectButton" id="Selection" name="Selection" value={{ sensor.sensorID }} >More Details</button>
-		</form><br>    
+			<p> Search for a sensor by its: </p>
+			<input type="radio" id="sensorID" name="searchType" value="sensorID" checked>
+			<label for="sensorID"> SensorID </label>
+			<input type="radio" id="longitude" name="searchType" value="longitude">
+			<label for="longitude"> Longitude </label>
+			<input type="radio" id="latitude" name="searchType" value="latitude">
+			<label for="latitude"> Latitude </label>
+			<input type="radio" id="installDate" name="searchType" value="installDate">
+			<label for="installDate"> Install Date </label> <br>
+			<input type="text" name="criteria" placeholder="Enter search..." style="width: 15%;">
+		</form>
 	</div>
-    {% endfor %}
-	</p>
+</div>
 
+<!-- Container 2: sensor list -->
+<div class="container bg-dark my-3">
+	<div class="row bg-info">
+		<div class="col table-responsive"> 
+			<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
+				<caption style="text-align:center; color: black;"> All Sensors </caption>
+				<thead class="table-danger">
+					<tr>
+						<th> Sensor ID </th>
+						<th> Longitude </th>
+						<th> Latitude </th>
+						<th> Install Date </th>
+						<th> Details </th>
+						<th> Example </th><th> Example </th><th> Example </th><th> Example </th><th> Example </th>
+					</tr>
+				</thead>
+				<tbody> 
+					{% for sensor in sensors %} 
+					<tr style="text-align: center;">
+						<td> {{sensor.sensorID }} </td> 
+						<td> {{sensor.longitude}} </td>
+						<td> {{sensor.latitude}} </td>
+						<td> {{sensor.installDate}} </td>
+						<td> 
+							<form method="POST" action="/sensor/">
+								{% csrf_token %}
+								<button class="selectButton btn btn-primary" id="Selection" name="Selection" value={{ sensor.sensorID }} > More Details </button>
+							</form> 
+						</td>
+						<td> Example </td><td> Example </td><td> Example </td><td> Example </td><td> Example </td>
+					</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+		</div>
+	</div>
+</div>
 
-
-</body>
-</html>
+{% endblock %} 
