--- a/airMonitor/templates/airMonitor/sensor_BME.html
+++ b/airMonitor/templates/airMonitor/sensor_BME.html
@@ -4,6 +4,73 @@
 
 {% block content %}
 
+<div id="container" style="margin:0 auto; width:80%;">
+	<canvas id="line-chart1"></canvas>
+</div>
+<div id="container2" style="margin:0 auto; width: 80%;">
+	<canvas id="line-chart2"></canvas>
+</div>
+<div id="container3" style="margin:0 auto; width: 80%;">
+	<canvas id="line-chart3"></canvas>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+<script>
+	var config1 = {
+		type: 'line',
+		data: {
+			datasets: [{
+				data: {{ tempList|safe }},
+				borderColor: 'red',
+				backgroundColor: "rgba(0,0,0,0)",
+				label: 'Temperature'
+			},],
+			labels: {{ labelList|safe }}
+		},
+		options: {
+			responsive: true
+		}
+	};
+	var config2 = {
+		type: 'line',
+		data: {
+			datasets: [{
+				data: {{ humList|safe }},
+				borderColor: 'green',
+				backgroundColor: "rgba(0,0,0,0)",
+				label: 'Humidity'
+			},],
+			labels: {{ labelList|safe }}
+		},
+		options: {
+			responsive: true
+		}
+	};
+	var config3 = {
+		type: 'line',
+		data: {
+			datasets: [{
+				data: {{ pressList|safe }},
+				borderColor: 'black',
+				backgroundColor: "rgba(0,0,0,0)",
+				label: 'Pressure'
+			},],
+			labels: {{ labelList|safe }}
+		},
+		options: {
+			responsive: true
+		}
+	};
+	window.onload = function() {
+		var ctx1 = document.getElementById('line-chart1').getContext('2d');
+		window.myLine1 = new Chart(ctx1, config1);	
+		var ctx2 = document.getElementById('line-chart2').getContext('2d');
+		window.myLine2 = new Chart(ctx2, config2);	
+		var ctx3 = document.getElementById('line-chart3').getContext('2d');
+		window.myLine3 = new Chart(ctx3, config3);	
+	};
+</script>
+
 <!-- Container 1: sensor information -->
 <div class="container bg-dark my-3">
 	<div class="row bg-info">
@@ -17,7 +84,6 @@
 						<th> Humidity </th>
 						<th> Temperature </th>
 						<th> Example </th>
-						<th> Example </th><th> Example </th><th> Example </th><th> Example </th><th> Example </th>
 					</tr>
 				</thead>
 				<tbody> 
@@ -26,9 +92,8 @@
 						<td> {{ sensor.timestamp }} </td> 
 						<td> {{ sensor.pressure }} </td>
 						<td> {{ sensor.humidity }} </td>
-						<td> {{sensor.temperature}} </td>
+						<td> {{ sensor.temperature}} </td>
 						<td> Example </td>
-						<td> Example </td><td> Example </td><td> Example </td><td> Example </td><td> Example </td>
 					</tr>
 					{% endfor %}
 				</tbody>
