--- a/airMonitor/templates/airMonitor/sensor_SDS.html
+++ b/airMonitor/templates/airMonitor/sensor_SDS.html
@@ -4,20 +4,49 @@
 
 {% block content %}
 
+<div id="container" style="margin:0 auto; width:80%;">
+	<canvas id="line-chart"></canvas>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+<script>
+	var config = {
+		type: 'line',
+		data: {
+			datasets: [{
+				data: {{ p1List|safe }},
+				borderColor: 'gold',
+				backgroundColor: "rgba(0,0,0,0)",
+				label: 'P1'
+			},
+			{
+				data: {{ p2List|safe }},
+				borderColor: 'silver',
+				backgroundColor: "rgba(0,0,0,0)",
+				label: 'P2'
+			}],
+			labels: {{ labelList|safe }}
+		},
+		options: {
+			responsive: true
+		}
+	};
+	window.onload = function() {
+		var ctx = document.getElementById('line-chart').getContext('2d');
+		window.myLine = new Chart(ctx, config);	
+	};
+</script>
+
 <!-- Container 1: sensor information -->
 <div class="container bg-dark my-3">
 	<div class="row bg-info">
 		<div class="col table-responsive"> 
 			<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
-				<caption style="text-align:center; color: black;"> Sensor Information </caption>
+				<caption style="text-align:center; color: black;"> <h1>Sensor Information </h1> </caption>
 				<thead class="table-danger">
 					<tr>
 						<th> Timestamp </th>
 						<th> P1 </th>
 						<th> P2 </th>
-						<th> Example </th>
-						<th> Example </th>
-						<th> Example </th><th> Example </th><th> Example </th><th> Example </th><th> Example </th>
 					</tr>
 				</thead>
 				<tbody> 
@@ -26,9 +55,6 @@
 						<td> {{ sensor.timestamp }} </td> 
 						<td> {{ sensor.P1 }} </td>
 						<td> {{ sensor.P2 }} </td>
-						<td> Example </td>
-						<td> Example </td>
-						<td> Example </td><td> Example </td><td> Example </td><td> Example </td><td> Example </td>
 					</tr>
 					{% endfor %}
 				</tbody>
