--- a/airMonitor/templates/airMonitor/sensorListPage.html
+++ b/airMonitor/templates/airMonitor/sensorListPage.html
@@ -3,7 +3,7 @@
 {% block title %} Sensor List {% endblock %}
 
 {% block content %}
-
+<h1 name="listPage"></h1>
 <!-- Container 1: search bar -->
 <div class="container my-3 bg-success">
 	<div class="row bg-warning">
