--- a/airMonitor/templates/airMonitor/base.html
+++ b/airMonitor/templates/airMonitor/base.html
@@ -46,13 +46,13 @@
 
                     <!-- links -->
                     <li class="nav-item">
-                        <a class="nav-link text-warning" href="/"> Home </a>
+                        <a class="nav-link text-warning" href="/" name="homeLink"> Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-warning" href="/sensorListPage"> Sensor List </a>
+                        <a class="nav-link text-warning" href="/sensorListPage" name="listLink"> Sensor List </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-warning" href="/comparisons"> Comparisons </a>
+                        <a class="nav-link text-warning" href="/comparisons" name="comparisonLink"> Comparisons </a>
                     </li>
                     
                     <!-- others 
