Testing Setup Complete

--- a/airMonitor/templates/airMonitor/comparisons.html
+++ b/airMonitor/templates/airMonitor/comparisons.html
@@ -3,7 +3,7 @@
 {% block title %} Comparisons {% endblock %}
 
 {% block content %}
-
+<h1 name="comparisonPage"></h1>
 <body>
 
 	<!-- Container 1: Selection Area -->
