--- a/airMonitor/templates/airMonitor/index.html
+++ b/airMonitor/templates/airMonitor/index.html
@@ -3,7 +3,7 @@
 {% block title %} Air Monitor {% endblock %}
 
 {% block content %}
-
+<h1 name="homePage"></h1>
 <!-- container(s) -->
 
 <!-- Container 1: map -->
