--- a/airMonitor/templates/airMonitor/sensor_DHT.html
+++ b/airMonitor/templates/airMonitor/sensor_DHT.html
@@ -3,7 +3,7 @@
 {% block title %} DHT22 Sensor {% endblock %}
 
 {% block content %}
-
+<h1 name="DHTdetailsPage"></h1>
 <div id="container" style="margin:0 auto; width:80%;">
 	<canvas id="line-chart1"></canvas>
 </div>
