--- a/airMonitor/templates/airMonitor/sensor_SDS.html
+++ b/airMonitor/templates/airMonitor/sensor_SDS.html
@@ -3,7 +3,7 @@
 {% block title %} SDS011 Sensor {% endblock %}
 
 {% block content %}
-
+<h1 name="SDSdetailsPage"></h1>
 <div id="container" style="margin:0 auto; width:80%;">
 	<canvas id="line-chart"></canvas>
 </div>
