--- a/airMonitor/templates/airMonitor/sensor_SDS.html
+++ b/airMonitor/templates/airMonitor/sensor_SDS.html
@@ -4,9 +4,84 @@
 
 {% block content %}
 <h1 name="SDSdetailsPage"></h1>
+
+<div>
+	<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
+				<caption style="text-align:center; color: black;"> <h1>Sensor Information </h1> </caption>
+				<thead class="table-danger">
+					<tr>
+						<th> Sensor ID </th>
+						<td>{{ sType.sensorID }}</td>
+					</tr>
+					<tr>
+						<th> Longitude </th>
+						<td>{{ sType.longitude }}</td>
+					</tr>
+					<tr>
+						<th> Latitude </th>
+						<td>{{ sType.latitude }}</td>
+					</tr>
+					<tr>
+						<th> Location ID </th>
+						<td>{{ sType.location_id }}</td>
+					</tr>
+				</thead>
+				</tbody>
+			</table>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script>
+	$(document).ready(function(){
+		$("#sType").on('change',function(){
+			$(".display").hide();
+			$("#" + $(this).val()).fadeIn(200);
+		}).change();
+	});
+</script>
+
+<select name="sType" id="sType">
+	<option value="Live"> Live Data </option>
+	<option value="Archive"> Past Data </option>
+	<option value="Charts"> Data Charts </option>
+</select>
+
+
+<!-- Container 3: Live Sensor Data -->
+<div class="display" id="Live">
+<div class="container bg-dark my-3" >
+	<div class="row bg-info">
+		<div class="col table-responsive"> 
+			<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
+				<caption style="text-align:center; color: black;"> <h1>Live Sensor Data Table </h1> </caption>
+				<thead class="table-danger">
+					<tr>
+						<th> Timestamp </th>
+						<th> P1 </th>
+						<th> P2 </th>
+					</tr>
+				</thead>
+				<tbody> 
+					<tr style="text-align: center;">
+						<td> sensor.timestamp </td> 
+						<td> sensor.P1 </td>
+						<td> sensor.P2 </td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
+</div>
+</div>
+
+<!-- Container 2: Charts -->
+<div class="display" id="Charts">
 <div id="container" style="margin:0 auto; width:80%;">
+	<caption style="text-align:center; color: black;"> <h1>Data Table </h1> </caption>
 	<canvas id="line-chart"></canvas>
 </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 <script>
 	var config = {
@@ -36,12 +111,13 @@
 	};
 </script>
 
-<!-- Container 1: sensor information -->
-<div class="container bg-dark my-3">
+<!-- Container 1: past sensor data -->
+<div class="display" id="Archive">
+<div class="container bg-dark my-3" >
 	<div class="row bg-info">
 		<div class="col table-responsive"> 
 			<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
-				<caption style="text-align:center; color: black;"> <h1>Sensor Information </h1> </caption>
+				<caption style="text-align:center; color: black;"> <h1>Sensor Data Table </h1> </caption>
 				<thead class="table-danger">
 					<tr>
 						<th> Timestamp </th>
@@ -62,5 +138,5 @@
 		</div>
 	</div>
 </div>
-    
+</div> 
 {% endblock %}
