Live Data on Sesnor Page

--- a/airMonitor/templates/airMonitor/sensor_DHT.html
+++ b/airMonitor/templates/airMonitor/sensor_DHT.html
@@ -88,9 +88,9 @@
 				</thead>
 				<tbody> 
 					<tr style="text-align: center;">
-						<td> sensor.timestamp </td> 
-						<td> sensor.humidity </td>
-						<td> sensor.temperature </td>
+						<td> {{liveTimestamp}} </td>
+						<td> {{liveHumi}} 	</td>
+						<td> {{liveTemp}}	</td> 
 					</tr>
 				</tbody>
 			</table>
