--- a/airMonitor/templates/airMonitor/sensor_SDS.html
+++ b/airMonitor/templates/airMonitor/sensor_SDS.html
@@ -86,9 +86,9 @@
 				</thead>
 				<tbody> 
 					<tr style="text-align: center;">
-						<td> sensor.timestamp </td> 
-						<td> sensor.P1 </td>
-						<td> sensor.P2 </td>
+						<td> {{liveTimestamp}} </td> 
+						<td> {{liveP1}} </td>
+						<td> {{liveP2}} </td>
 					</tr>
 				</tbody>
 			</table>
