--- a/airMonitor/templates/airMonitor/sensor_BME.html
+++ b/airMonitor/templates/airMonitor/sensor_BME.html
@@ -86,10 +86,10 @@
 				</thead>
 				<tbody> 
 					<tr style="text-align: center;">
-						<td> sensor.timestamp </td> 
-						<td> sensor.pressure </td>
-						<td> sensor.humidity </td>
-						<td> sensor.temperature </td>
+						<td> {{liveTimestamp}} </td> 
+						<td> {{livePress}} </td>
+						<td> {{liveHumi}} </td>
+						<td> {{liveTemp}} </td>
 					</tr>
 				</tbody>
 			</table>
