--- a/airMonitor/templates/airMonitor/sensorListPage.html
+++ b/airMonitor/templates/airMonitor/sensorListPage.html
@@ -54,8 +54,8 @@
 						<th> Longitude </th>
 						<th> Latitude </th>
 						<th> Sensor Type </th>
+						<th> Location ID</th>
 						<th> Details </th>
-						<th> Example </th><th> Example </th><th> Example </th><th> Example </th><th> Example </th>
 					</tr>
 				</thead>
 				<tbody> 
@@ -65,13 +65,13 @@
 						<td> {{sensor.longitude}} </td>
 						<td> {{sensor.latitude}} </td>
 						<td> {{sensor.sensorType}} </td>
+						<td> {{sensor.locationID}}</td>
 						<td> 
 							<form method="POST" action="/sensor/">
 								{% csrf_token %}
 								<button class="selectButton btn btn-primary" id="Selection" name="Selection" value={{ sensor.sensorID }} > More Details </button>
 							</form> 
 						</td>
-						<td> Example </td><td> Example </td><td> Example </td><td> Example </td><td> Example </td>
 					</tr>
 					{% endfor %}
 				</tbody>
