--- a/airMonitor/templates/airMonitor/sensorListPage.html
+++ b/airMonitor/templates/airMonitor/sensorListPage.html
@@ -65,7 +65,7 @@
 						<td> {{sensor.longitude}} </td>
 						<td> {{sensor.latitude}} </td>
 						<td> {{sensor.sensorType}} </td>
-						<td> {{sensor.locationID}}</td>
+						<td> {{sensor.location_id}}</td>
 						<td> 
 							<form method="POST" action="/sensor/">
 								{% csrf_token %}
