--- a/airMonitor/templates/airMonitor/base.html
+++ b/airMonitor/templates/airMonitor/base.html
@@ -16,8 +16,7 @@
 
     <!-- css and js links -->
     <link rel="stylesheet" type="text/css" href="/static/map.css">
-    <!-- <script type="text/javascript" src="static/map.js"></script> -->
-
+    
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- JavaScript: For displaying charts  -->
@@ -36,7 +35,7 @@
 
             <!-- logo -->
 	    <div class="logo">
-            <a class="navbar-brand" href="/"> 
+            <a class="navbar-brand" href="/landing"> 
                 <!-- if an image for logo -->
                 <img src="https://www.airaberdeen.org/wp-content/uploads/2020/07/cropped-hex-wind-header-2.png" alt="Logo" style="width:150px;" class="rounded-pill">
             </a> 
@@ -53,7 +52,7 @@
 
                     <!-- links -->
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/" name="homeLink"> Home </a>
+                        <a class="nav-link text-white" href="/" name="homeLink"> Map </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/sensorListPage" name="listLink"> Sensor List </a>
@@ -70,10 +69,16 @@
     {% block content %}
     {% endblock %} 
 
-    <footer class="mt-auto p-3 mt-3 text-center text-white" style="background-color: black;"> 
-       @ ECHO 2022 
-    </footer>
+    
 
+<!-- <script type="text/javascript" src="static/map.js"></script> -->
 
 </body>
+
+<footer class="mt-auto p-3 text-center text-white" style="background-color: black;"> 
+    @ ECHO 2022 
+</footer>
+
 </html>
+
+
