--- a/airMonitor/templates/airMonitor/comparisons.html
+++ b/airMonitor/templates/airMonitor/comparisons.html
@@ -77,7 +77,7 @@
 				</div>
 				<!-- Column 3: comparison button -->
 				<div class="col text-center align-self-center">
-					<button type="submit" class="btn btn-primary my-1"> Compare </button>
+					<button type="submit" class="btn btn-success my-1"> Compare </button>
 					<!-- <input type="submit" value="Submit"> -->
 				</div>
 			</div>
@@ -109,7 +109,7 @@
 				</div>
 				<!-- Column 3: compa button -->
 				<div class="col text-center align-self-center">
-					<button type="submit" class="btn btn-primary my-1"> Compare </button>
+					<button type="submit" class="btn btn-success my-1"> Compare </button>
 					<!-- <input type="submit" value="Submit"> -->
 				</div>
 			</div>
@@ -141,7 +141,7 @@
 				</div>
 				<!-- Column 3: comparison button -->
 				<div class="col text-center align-self-center">
-					<button type="submit" class="btn btn-primary my-1"> Compare </button>
+					<button type="submit" class="btn btn-success my-1"> Compare </button>
 					<!-- <input type="submit" value="Submit"> -->
 				</div>
 			</div>
@@ -158,7 +158,7 @@
 			{% if sList1 %}
 			<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
 				<caption style="text-align: center; color: red;"> <b> Sensor 1 </b> </caption>
-				<thead class="table-secondary">
+				<thead style="background-color: darkgreen; color: white;">
 					<tr>
 						<th>ID</th>
 						<th>Location ID</th>
@@ -201,7 +201,7 @@
 					<td>
 						<form method="POST" action="/sensor/">
 							{% csrf_token %}
-							<button class="selectButton btn btn-primary" id="Selection" name="Selection" value={{ sList1.sensorID }} >More Details</button>
+							<button class="selectButton btn btn-success" id="Selection" name="Selection" value={{ sList1.sensorID }} >More Details</button>
 						</form>
 					</td>	
 				</tr>
@@ -212,7 +212,7 @@
 		<div class="col-md-6 col-xs-6 col-sm-6 mr-2 table-responsive"> 
 			<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
 				<caption style="text-align:center; color: blue;"> <b>Sensor 2 </b> </caption>
-				<thead class="table-secondary">
+				<thead style="background-color: darkgreen; color: white;">
 					<tr>
 						<th>ID</th>
 						<th>Location ID</th>
@@ -255,7 +255,7 @@
 					<td>
 						<form method="POST" action="/sensor/">
 							{% csrf_token %}
-							<button class="selectButton btn btn-primary" id="Selection" name="Selection" value={{ sList2.sensorID }} >More Details</button>
+							<button class="selectButton btn btn-success" id="Selection" name="Selection" value={{ sList2.sensorID }} >More Details</button>
 						</form>
 					</td>	
 				</tr>
