--- a/airMonitor/templates/airMonitor/sensorListPage.html
+++ b/airMonitor/templates/airMonitor/sensorListPage.html
@@ -48,7 +48,7 @@
 		<div class="col table-responsive"> 
 			<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
 				<caption style="text-align:center; color: black;"> All Sensors </caption>
-				<thead class="table-secondary">
+				<thead style="background-color: darkgreen; color: white;">
 					<tr>
 						<th> Sensor ID </th>
 						<th> Longitude </th>
@@ -69,7 +69,7 @@
 						<td> 
 							<form method="POST" action="/sensor/">
 								{% csrf_token %}
-								<button class="selectButton btn btn-primary" id="Selection" name="Selection" value={{ sensor.sensorID }} > More Details </button>
+								<button class="selectButton btn btn-success" id="Selection" name="Selection" value={{ sensor.sensorID }} > More Details </button>
 							</form> 
 						</td>
 					</tr>
