--- a/airMonitor/templates/airMonitor/sensor_BME.html
+++ b/airMonitor/templates/airMonitor/sensor_BME.html
@@ -12,7 +12,7 @@
 	<div class="row table-responsive"> 
 		<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
 			<caption style="text-align:center; color: black;"> <h1> Sensor Information </h1> </caption>
-			<thead class="table-secondary align-middle">
+			<thead class="align-middle" style="background-color: darkgreen; color: white;">
 				<tr>
 					<th> Sensor ID </th>
 					<td>{{ sType.sensorID }}</td>
@@ -94,7 +94,7 @@
 		<div class="col table-responsive"> 
 			<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
 				<caption style="text-align:center; color: black;"> <h1>Live Sensor Data Table </h1> </caption>
-				<thead class="table-secondary">
+				<thead style="background-color: darkgreen; color: white;">
 					<tr>
 						<th> Timestamp </th>
 						<th> Pressure </th>
@@ -121,7 +121,7 @@
 		<div class="col table-responsive"> 
 			<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
 				<caption style="text-align:center; color: black;"> <h1>Sensor Data Table </h1> </caption>
-				<thead class="table-secondary">
+				<thead style="background-color: darkgreen; color: white;">
 					<tr>
 						<th> Timestamp </th>
 						<th> Pressure </th>
@@ -149,15 +149,17 @@
 <div class="container my-3 display" id="Charts">
 	<!-- Chart 1: Temperature -->
 	<div class="row justify-content-center" id="container">
-		<caption> <h1 style="text-align:center; color: black;"> Data Tables </h1> </caption>
+		<caption> <h1 style="text-align:center; color: black;"> Temperature </h1> </caption>
 		<canvas id="line-chart1"></canvas>
 	</div>
 	<!-- Chart 2: Humidity -->
 	<div class="row my-3 justify-content-center" id="container2">
+		<caption> <h1 style="text-align:center; color: black;"> Humidity </h1> </caption>
 		<canvas id="line-chart2"></canvas>
 	</div>
 	<!-- Chart 3: Pressure -->
 	<div class="row justify-content-center" id="container3">
+		<caption> <h1 style="text-align:center; color: black;"> Pressure </h1> </caption>
 		<canvas id="line-chart3"></canvas>
 	</div>
 </div>
