--- a/airMonitor/templates/airMonitor/sensor_SDS.html
+++ b/airMonitor/templates/airMonitor/sensor_SDS.html
@@ -12,7 +12,7 @@
 	<div class="row table-responsive"> 
 		<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
 			<caption style="text-align:center; color: black;"> <h1> Sensor Information </h1> </caption>
-			<thead class="table-secondary align-middle">
+			<thead class="align-middle" style="background-color: darkgreen; color: white;">
 				<tr>
 					<th> Sensor ID </th>
 					<td>{{ sType.sensorID }}</td>
@@ -93,7 +93,7 @@
 		<div class="col table-responsive"> 
 			<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
 				<caption style="text-align:center; color: black;"> <h1>Live Sensor Data Table </h1> </caption>
-				<thead class="table-secondary">
+				<thead style="background-color: darkgreen; color: white;">
 					<tr>
 						<th> Timestamp </th>
 						<th> P1 </th>
@@ -118,7 +118,7 @@
 		<div class="col table-responsive"> 
 			<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
 				<caption style="text-align:center; color: black;"> <h1>Sensor Data Table </h1> </caption>
-				<thead class="table-secondary">
+				<thead style="background-color: darkgreen; color: white;">
 					<tr>
 						<th> Timestamp </th>
 						<th> P1 </th>
@@ -142,9 +142,9 @@
 <!-- Container 2(3): Charts -->
 <!-- Chart 1: P1 and P2 -->
 <div class="container my-3 display" id="Charts">
-	<caption> <h1 style="text-align:center; color: black;"> Data Table </h1> </caption>
+	<caption> <h1 style="text-align:center; color: black;"> P1 </h1> </caption>
 	<canvas id="line-chart"></canvas>
-	<caption> <h1 style="text-align:center; color: black;"> Data Table </h1> </caption>
+	<caption> <h1 style="text-align:center; color: black;"> P2 </h1> </caption>
 	<canvas id="line-chart2"></canvas>
 </div>
 
